@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="icons"/>
+	<classpathentry including="FWCore/" kind="src" path="python"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/home/raul/warehouse/workspace/ConfigDB_v619_importPython_working/ext/swing-layout-1.0.jar"/>
 	<classpathentry kind="lib" path="/home/raul/warehouse/workspace/ConfigDB_v619_importPython_working/ext/ojdbc14.jar"/>
